force-app/main/default/objects/Sales_Support_Request__c/Sales_Support_Request__c.object-meta.xml
<CustomObject>
    <label>Commercial Support Request</label>
    <nameField>
        <label>Request Subject</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Commercial Support Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>