force-app/main/default/objects/Sales_Support_Request__c/fields/Actual_Effort_hours__c.field-meta.xml
<CustomField>
    <fullName>Actual_Effort_hours__c</fullName>
    <label>Actual Effort (hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>