force-app/main/default/objects/Sales_Support_Request__c/fields/Affected_Account_IMGA__c.field-meta.xml
<CustomField>
    <fullName>Affected_Account_IMGA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affected Account / IMGA</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>