force-app/main/default/objects/Sales_Support_Request__c/fields/Affected_IM_Division__c.field-meta.xml
<CustomField>
    <fullName>Affected_IM_Division__c</fullName>
    <inlineHelpText>IM Division which should be covered in this Request</inlineHelpText>
    <label>Affected IM Division</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ANZ</fullName>
            </value>
            <value>
                <fullName>IMAP</fullName>
                <label>APAC</label>
            </value>
            <value>
                <fullName>Central and South Europe(CSE)</fullName>
            </value>
            <value>
                <fullName>Global</fullName>
            </value>
            <value>
                <fullName>India</fullName>
            </value>
            <value>
                <fullName>IMLA</fullName>
                <label>LATAM</label>
            </value>
            <value>
                <fullName>MENAT</fullName>
            </value>
            <value>
                <fullName>IMNA</fullName>
                <label>North America(NA)</label>
            </value>
            <value>
                <fullName>Northern Europe(NE)</fullName>
            </value>
            <value>
                <fullName>RUCIS</fullName>
            </value>
            <value>
                <fullName>UKI</fullName>
            </value>
            <value>
                <fullName>IME</fullName>
                <label>Western Europe(WE)</label>
            </value>
            <value>
                <fullName>CPO</fullName>
                <isActive>false</isActive>
                <label>CPO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>