force-app/main/default/objects/Sales_Support_Request__c/fields/Alternate_contact__c.field-meta.xml
<CustomField>
    <fullName>Alternate_contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Commercial Support Requests</relationshipLabel>
    <relationshipName>Commercial_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>