force-app/main/default/objects/Sales_Support_Request__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Sales Support Team Member</inlineHelpText>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Factory_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>