force-app/main/default/objects/Sales_Support_Request__c/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <description>#31274: This field holds the Related Opportunity&apos;s Billing Country Name</description>
    <formula>Related_Opportunity__r.Billing_Country__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>