force-app/main/default/objects/Sales_Support_Request__c/fields/Child_Request__c.field-meta.xml
<CustomField>
    <fullName>Child_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Child Request</label>
    <referenceTo>Sales_Support_Request__c</referenceTo>
    <relationshipLabel>Child Request</relationshipLabel>
    <relationshipName>Commercial_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>