force-app/main/default/objects/Sales_Support_Request__c/fields/Content_Due__c.field-meta.xml
<CustomField>
    <fullName>Content_Due__c</fullName>
    <label>First Draft Sent Date</label>
    <type>Date</type>
</CustomField>