force-app/main/default/objects/Sales_Support_Request__c/fields/Date_Submitted_2__c.field-meta.xml
<CustomField>
    <fullName>Date_Submitted_2__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Submitted</label>
    <type>Date</type>
</CustomField>