force-app/main/default/objects/Sales_Support_Request__c/fields/Describe_the_relationship_with_customer__c.field-meta.xml
<CustomField>
    <fullName>Describe_the_relationship_with_customer__c</fullName>
    <label>Describe the relationship with customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>