force-app/main/default/objects/Sales_Support_Request__c/fields/Did_you_have_advance_notice_of_the_RFP__c.field-meta.xml
<CustomField>
    <fullName>Did_you_have_advance_notice_of_the_RFP__c</fullName>
    <label>Did you have advance notice of the RFP?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>