force-app/main/default/objects/Sales_Support_Request__c/fields/Did_you_influence_the_content_scope__c.field-meta.xml
<CustomField>
    <fullName>Did_you_influence_the_content_scope__c</fullName>
    <label>Did you influence the content/scope?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>