force-app/main/default/objects/Sales_Support_Request__c/fields/Do_you_know_the_decision_makers__c.field-meta.xml
<CustomField>
    <fullName>Do_you_know_the_decision_makers__c</fullName>
    <label>Do you know the decision-makers?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>