force-app/main/default/objects/Sales_Support_Request__c/fields/Does_our_solution_meet_our_customer_need__c.field-meta.xml
<CustomField>
    <fullName>Does_our_solution_meet_our_customer_need__c</fullName>
    <label>Does our solution meet our customer need</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>