force-app/main/default/objects/Sales_Support_Request__c/fields/Estimated_Complete_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Complete_Date__c</fullName>
    <inlineHelpText>Sales Support Rep&apos;s estimated closed date</inlineHelpText>
    <label>Estimated Complete Date</label>
    <type>Date</type>
</CustomField>