force-app/main/default/objects/Sales_Support_Request__c/fields/Estimated_Effort_Hours__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Effort_Hours__c</fullName>
    <label>Estimated Effort (Hours)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>