force-app/main/default/objects/Sales_Support_Request__c/fields/Final_Proposal_Attached__c.field-meta.xml
<CustomField>
    <fullName>Final_Proposal_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Proposal Attached?</label>
    <type>Checkbox</type>
</CustomField>