force-app/main/default/objects/Sales_Support_Request__c/fields/Final_Review__c.field-meta.xml
<CustomField>
    <fullName>Final_Review__c</fullName>
    <label>Final Review</label>
    <type>Date</type>
</CustomField>