force-app/main/default/objects/Sales_Support_Request__c/fields/Follow_up_Request_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Request_Completion_Date__c</fullName>
    <label>Follow-up Request Completion Date</label>
    <type>DateTime</type>
</CustomField>