force-app/main/default/objects/Sales_Support_Request__c/fields/GCCS_Follow_up_Request_Stage__c.field-meta.xml
<CustomField>
    <fullName>GCCS_Follow_up_Request_Stage__c</fullName>
    <label>GCCS Follow-up Request Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>