force-app/main/default/objects/Sales_Support_Request__c/fields/GCCS_Initial_Request_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>GCCS_Initial_Request_Completion_Date__c</fullName>
    <label>GCCS Initial Request Completion Date</label>
    <type>DateTime</type>
</CustomField>