force-app/main/default/objects/Sales_Support_Request__c/fields/GCCS_Request_Pending_With__c.field-meta.xml
<CustomField>
    <fullName>GCCS_Request_Pending_With__c</fullName>
    <label>GCCS Request Pending With</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>DOC Support</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>A2C</fullName>
            </value>
            <value>
                <fullName>InfoSec</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>Background investigations(BI)</fullName>
            </value>
            <value>
                <fullName>Employee Relations/Diversity reporting</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Other Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>