force-app/main/default/objects/Sales_Support_Request__c/fields/Global_Account_related__c.field-meta.xml
<CustomField>
    <fullName>Global_Account_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Account related</label>
    <type>Checkbox</type>
</CustomField>