force-app/main/default/objects/Sales_Support_Request__c/fields/Global_Industry__c.field-meta.xml
<CustomField>
    <fullName>Global_Industry__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Industry</label>
    <type>Checkbox</type>
</CustomField>