force-app/main/default/objects/Sales_Support_Request__c/fields/Has_digital_solutions_qualified_the_RFP__c.field-meta.xml
<CustomField>
    <fullName>Has_digital_solutions_qualified_the_RFP__c</fullName>
    <label>Has digital solutions qualified the RFP?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>