force-app/main/default/objects/Sales_Support_Request__c/fields/If_Yes_then_provide_the_details__c.field-meta.xml
<CustomField>
    <fullName>If_Yes_then_provide_the_details__c</fullName>
    <label>If Yes, then provide the details</label>
    <length>250</length>
    <type>Text</type>
</CustomField>