force-app/main/default/objects/Sales_Support_Request__c/fields/Initial_Request_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Initial_Request_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initial Request Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Commercial_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>