force-app/main/default/objects/Sales_Support_Request__c/fields/Initial_Request_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Request_Received_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <label>Initial Request Received Date</label>
    <type>DateTime</type>
</CustomField>