force-app/main/default/objects/Sales_Support_Request__c/fields/Is_price_a_driving_factor_in_the_here__c.field-meta.xml
<CustomField>
    <fullName>Is_price_a_driving_factor_in_the_here__c</fullName>
    <label>Is price a driving factor here?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>