force-app/main/default/objects/Sales_Support_Request__c/fields/Is_there_any_issue_for_existing_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_there_any_issue_for_existing_customer__c</fullName>
    <inlineHelpText>For existing customers, have there been any issues (e.g., service performance, relationship, business we once had and lost, invoicing, contractual, etc.)?</inlineHelpText>
    <label>Is there any issue for existing customer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>