force-app/main/default/objects/Sales_Support_Request__c/fields/Is_there_any_issue_for_the_customer__c.field-meta.xml
<CustomField>
    <fullName>Is_there_any_issue_for_the_customer__c</fullName>
    <label>Is there any issue for the customer?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>