force-app/main/default/objects/Sales_Support_Request__c/fields/Lost_Comment_PM__c.field-meta.xml
<CustomField>
    <fullName>Lost_Comment_PM__c</fullName>
    <label>Lost Comment PM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>