force-app/main/default/objects/Sales_Support_Request__c/fields/Number_of_Hours_Additional_Support_3__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Hours_Additional_Support_3__c</fullName>
    <label>Number of Hours - Additional Support 3</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>