force-app/main/default/objects/Sales_Support_Request__c/fields/Occurrence__c.field-meta.xml
<CustomField>
    <fullName>Occurrence__c</fullName>
    <label>Occurrence</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semi-Annual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Non Recurring</fullName>
            </value>
            <value>
                <fullName>WA LAM</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>SAP Accepted</fullName>
            </value>
            <value>
                <fullName>Em aprovação CLIENTE</fullName>
            </value>
            <value>
                <fullName>SAP Rejected</fullName>
            </value>
            <value>
                <fullName>Em aprovação DIRETORIA IMB</fullName>
            </value>
            <value>
                <fullName>Em execução (A2C)</fullName>
            </value>
            <value>
                <fullName>Em execução (Contratos)</fullName>
            </value>
            <value>
                <fullName>Em execução (Pricing Execution)</fullName>
            </value>
            <value>
                <fullName>Em execução (Revenue Management)</fullName>
            </value>
            <value>
                <fullName>Solicitado informações adicionais</fullName>
            </value>
            <value>
                <fullName>Aguardando Success</fullName>
            </value>
            <value>
                <fullName>Aguardando Comercial</fullName>
            </value>
            <value>
                <fullName>Aguardando Outros</fullName>
            </value>
            <value>
                <fullName>Encerrado (atendimento completo)</fullName>
            </value>
            <value>
                <fullName>Encerrado (dados incompletos)</fullName>
            </value>
            <value>
                <fullName>Encerrado (sem updates)</fullName>
            </value>
            <value>
                <fullName>Encerrado (outros)</fullName>
            </value>
            <value>
                <fullName>Outros</fullName>
            </value>
            <value>
                <fullName>Non-Standard</fullName>
                <isActive>false</isActive>
                <label>Non-Standard</label>
            </value>
            <value>
                <fullName>Standard</fullName>
                <isActive>false</isActive>
                <label>Standard</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>