force-app/main/default/objects/Sales_Support_Request__c/fields/Opportunity_Support_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Support_Status__c</fullName>
    <label>Opportunity Support Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Information Only</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Not Supported</fullName>
            </value>
            <value>
                <fullName>On hold/Postponed</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Waiting for info</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>