force-app/main/default/objects/Sales_Support_Request__c/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <formula>TEXT(Related_Opportunity__r.Type)</formula>
    <label>Opportunity Type</label>
    <type>Text</type>
</CustomField>