force-app/main/default/objects/Sales_Support_Request__c/fields/Pending_with__c.field-meta.xml
<CustomField>
    <fullName>Pending_with__c</fullName>
    <label>Pending with</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales representative</fullName>
            </value>
            <value>
                <fullName>Sales manager</fullName>
            </value>
            <value>
                <fullName>Sales Director</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>InfoSec</fullName>
            </value>
            <value>
                <fullName>Customer Care</fullName>
            </value>
            <value>
                <fullName>GCCS</fullName>
            </value>
            <value>
                <fullName>Revenue Management</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Other Teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>