force-app/main/default/objects/Sales_Support_Request__c/fields/Post_Sales_related__c.field-meta.xml
<CustomField>
    <fullName>Post_Sales_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reassigned</label>
    <type>Checkbox</type>
</CustomField>