force-app/main/default/objects/Sales_Support_Request__c/fields/Pre_Sales_related__c.field-meta.xml
<CustomField>
    <fullName>Pre_Sales_related__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre-Sales related</label>
    <type>Checkbox</type>
</CustomField>