force-app/main/default/objects/Sales_Support_Request__c/fields/Primary_product_line__c.field-meta.xml
<CustomField>
    <fullName>Primary_product_line__c</fullName>
    <formula>Text(Related_Opportunity__r.Primary_Product_Line__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary product line</label>
    <type>Text</type>
</CustomField>