force-app/main/default/objects/Sales_Support_Request__c/fields/Proposal_Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Delivery_Type__c</fullName>
    <label>Proposal Delivery Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Soft Copy</fullName>
            </value>
            <value>
                <fullName>Hard Copy</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Media (CD/Thumb)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>