force-app/main/default/objects/Sales_Support_Request__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Factory_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>