force-app/main/default/objects/Sales_Support_Request__c/fields/Related_BoB_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Related_BoB_Coverage__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>the Bob Coverage record  the Sales Support Request relates to</description>
    <label>Related BoB Coverage</label>
    <referenceTo>BoB_Coverage__c</referenceTo>
    <relationshipName>Sales_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>