force-app/main/default/objects/Sales_Support_Request__c/fields/Related_Commercial_Support_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Commercial_Support_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Commercial Support Request-GCCS</label>
    <referenceTo>Sales_Support_Request__c</referenceTo>
    <relationshipLabel>Commercial Support Requests (Related Commercial Support Request)</relationshipLabel>
    <relationshipName>Commercial_Support_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>