force-app/main/default/objects/Sales_Support_Request__c/fields/Related_Corporate_Request__c.field-meta.xml
<CustomField>
    <fullName>Related_Corporate_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Corporate Request</label>
    <referenceTo>Corporate_Request__c</referenceTo>
    <relationshipLabel>Commercial Support Requests</relationshipLabel>
    <relationshipName>Commercial_Support_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>