force-app/main/default/objects/Sales_Support_Request__c/fields/Rep_Division__c.field-meta.xml
<CustomField>
    <fullName>Rep_Division__c</fullName>
    <formula>TEXT(Sales_Rep__r.Sales_Division__c)</formula>
    <label>Rep Division</label>
    <type>Text</type>
</CustomField>