force-app/main/default/objects/Sales_Support_Request__c/fields/Rep_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Rep_Line_of_Business__c</fullName>
    <formula>TEXT( Sales_Rep__r.Sales_Line_of_Business__c )</formula>
    <label>Rep Line of Business</label>
    <type>Text</type>
</CustomField>