force-app/main/default/objects/Sales_Support_Request__c/fields/Rep_Region__c.field-meta.xml
<CustomField>
    <fullName>Rep_Region__c</fullName>
    <formula>TEXT( Sales_Rep__r.Sales_Region__c )</formula>
    <label>Rep Region</label>
    <type>Text</type>
</CustomField>