force-app/main/default/objects/Sales_Support_Request__c/fields/Rep_Role_Type__c.field-meta.xml
<CustomField>
    <fullName>Rep_Role_Type__c</fullName>
    <description>this value pulled from the user record of the Sales Rep</description>
    <formula>TEXT(Sales_Rep__r.Role_Type__c)</formula>
    <label>Rep Role Type</label>
    <type>Text</type>
</CustomField>