force-app/main/default/objects/Sales_Support_Request__c/fields/Rep_Territory__c.field-meta.xml
<CustomField>
    <fullName>Rep_Territory__c</fullName>
    <formula>Sales_Rep__r.Sales_Territory__c</formula>
    <label>Rep Territory</label>
    <type>Text</type>
</CustomField>