force-app/main/default/objects/Sales_Support_Request__c/fields/Rep_Title__c.field-meta.xml
<CustomField>
    <fullName>Rep_Title__c</fullName>
    <formula>Sales_Rep__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rep Title</label>
    <type>Text</type>
</CustomField>