force-app/main/default/objects/Sales_Support_Request__c/fields/Request_Number__c.field-meta.xml
<CustomField>
    <fullName>Request_Number__c</fullName>
    <description>Unique number for identifying record</description>
    <displayFormat>SSR-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>Request Number</label>
    <type>AutoNumber</type>
</CustomField>