force-app/main/default/objects/Sales_Support_Request__c/fields/Request_Origin__c.field-meta.xml
<CustomField>
    <fullName>Request_Origin__c</fullName>
    <label>Request Origin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce.com</fullName>
                <default>true</default>
                <label>Salesforce.com</label>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>